<resources>
    <string name="app_name">NewsFBSDK</string>
    <string name="likesCount">\"Gefällt mir\"-Angaben</string>
    <string name="commentsCount">Kommentare</string>
    <string name="like">Gefällt mir</string>
    <string name="comment">Kommentieren</string>
    <string name="share">Teilen</string>
    <string name="expand_text">View more…</string>
    <string name="collaps_text">View less…</string>
    <string name="prompt_comment">Kommentar verfassen...</string>
    <string name="send_comment">Senden</string>
    <string name="cannot_comment">Comments are not allowed for you</string>
</resources>
